--- a/TestApp/TestApp.csproj
+++ b/TestApp/TestApp.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLL\CbrService.cs" />
+    <Compile Include="BLL\Interface\ICbrService.cs" />
     <Compile Include="Connected Services\ServiceReferenceCbr\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
